# browser-record-and-play

./: pyproject.toml
skills/: SKILL-FORGE.md  SKILL.md
src/browser_record/: auth.py  record.py
src/browser_record_and_play.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
