[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-record-and-play"
version = "0.1.0"
description = "Record browser operations and replay them as CLI tools powered by AI analysis."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agent", "automation", "browser", "cdp", "recording", "replay"]
dependencies = [
    "browser-harness>=0.1.3",
    "prompt_toolkit>=3.0",
    "browser_cookie3>=0.19",
    "httpx>=0.27",
]

[project.scripts]
bh-record = "browser_record.record:main"
bh-auth = "browser_record.auth:_cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
